NP-14569-fileWriter-generate-json, build fix